--- a/index.html
+++ b/index.html
@@ -7,23 +7,34 @@
     <title>Araujo Bienes Raices</title>
 </head>
 <body>
+    <img src="img/logo.svg" alt=""></img>
+    <a href="nosotros.html">Nosotros</a>
+    <a href="anuncios.html">Anuncios</a>
+    <a href="blog.html">Blog</a>
+    <a href="contacto.html">Contacto</a>
     <h1>Venta de Casas y Departamentos en la Zona Sur de La Paz</h1>
     
     <h2>Mas sobre nostros</h2>
+    <img src="img/icono3.svg" alt=""></img>
     <h3>Seguridad</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
+    <img src="img/icono1.svg" alt=""></img>
     <h3>El mejor precio</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
+    <img src="img/icono2.svg" alt=""></img>
     <h3>A tiempo</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
 
     <h2>Casas y Depas en Venta</h2>
+    <img src="img/anuncio1.jpg" alt=""></img>
     <h3>Casa de Lujo en el Lago</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
     <p>3000 $us</p>
+    <img src="img/anuncio2.jpg" alt=""></img>
     <h3>Casa terminados de lujo</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
     <p>2000 $us</p>
+    <img src="img/anuncio3.jpg" alt=""></img>
     <h3>Casa con Alberca</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
     <p>8000 $us</p>
@@ -32,10 +43,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, eos. Aliquid nemo atque unde dolorem, debitis cum sequi expedita velit deleniti officiis adipisci amet ducimus aliquam minima! Temporibus, similique nesciunt.</p>
 
     <h3>Nuestro Blog</h3>
+    <img src="img/blog1.jpg" alt=""></img>
     <h4>Terraza en el techo de tu casa</h4>
     <p>Escrito <em>20/10/2019</em> por <em>Admin</em></p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-  
+    <img src="img/blog2.jpg" alt=""></img>
     <h4>Guia para la decoracion de tu hogar</h4>
     <p>Escrito el: <em>20/10/2019</em>por <em>Admin</em></p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
