Ajustes de estilos al header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <img src="img/logo.svg" alt=""></img>
-        <nav>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
-        <h1>Venta de Casas y Departamentos en la Zona Sur de La Paz</h1>
+    <header class="site-header inicio">
+        <div class="contenedor">
+            <div class="barra">
+                <img src="img/logo.svg" alt=""></img>
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+            <h1>Venta de Casas y Departamentos en la Zona Sur de La Paz</h1>
+        </div>
     </header>
     <section>
             <h2>Mas sobre nostros</h2>
