se aplica estilos al segundo contenedor

--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
             <h1>Venta de Casas y Departamentos en la Zona Sur de La Paz</h1>
         </div>
     </header>
-    <section>
+    <section class="contenedor seccion">
             <h2>Mas sobre nostros</h2>
-            <div>
-                <img src="img/icono3.svg" alt=""></img>
-                <h3>Seguridad</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
-            </div>
-            <div>
-                <img src="img/icono1.svg" alt=""></img>
-                <h3>El mejor precio</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
-            </div>
-            <div>    
-                <img src="img/icono2.svg" alt=""></img>
-                <h3>A tiempo</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
+            <div class="iconos-nosotros">
+                <div class="icono">
+                    <img src="img/icono3.svg" alt=""></img>
+                    <h3>Seguridad</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
+                </div>
+                <div class="icono">
+                    <img src="img/icono1.svg" alt=""></img>
+                    <h3>El mejor precio</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
+                </div>
+                <div class="icono">    
+                    <img src="img/icono2.svg" alt=""></img>
+                    <h3>A tiempo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi, dolore, dolorem dolorum quo, saepe neque accusantium. Commodi inventore aliquam, molestiae doloribus sunt quas officia.</p>
+                </div>
             </div>
     </section>
     <main>
