--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <section class="contenedor seccion">
-            <h2>Mas sobre nostros</h2>
+            <h2 class="fw-300 centrar-texto">Mas sobre nostros</h2>
             <div class="iconos-nosotros">
                 <div class="icono">
                     <img src="img/icono3.svg" alt=""></img>
@@ -44,26 +44,38 @@
                 </div>
             </div>
     </section>
-    <main>
-        <h2>Casas y Depas en Venta</h2>
-        <div>
-            <img src="img/anuncio1.jpg" alt=""></img>
-            <h3>Casa de Lujo en el Lago</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-            <p>3000 $us</p>
+    <main class="seccion contenedor">
+        <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <img src="img/anuncio1.jpg" alt=""></img>
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
+                    <p>3000 $us</p>
+                    <a href="#">Ver Propiedades</a>
+                </div>
+            </div>
+            <div class="anuncio">
+                <img src="img/anuncio2.jpg" alt=""></img>
+                <div class="contenido-anuncio">
+                    <h3>Casa terminados de lujo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
+                    <p>2000 $us</p>
+                    <a href="#">Ver Propiedades</a>
+                </div>
+            </div>
+            <div class="anuncio">
+                <img src="img/anuncio3.jpg" alt=""></img>
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
+                    <p>8000 $us</p>
+                    <a href="#">Ver Propiedades</a>
+                </div>
+            </div>
         </div>
-        <div>
-            <img src="img/anuncio2.jpg" alt=""></img>
-            <h3>Casa terminados de lujo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-            <p>2000 $us</p>
-        </div>
-        <div>
-            <img src="img/anuncio3.jpg" alt=""></img>
-            <h3>Casa con Alberca</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-            <p>8000 $us</p>
-        </div>    
+        <a href="#">Ver Todas</a>    
     </main>    
     <section>
         <h2>Encuentra la casa de tus suenos</h2>
