se dieron estilos a los botones

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="contenido-anuncio">
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-                    <p>3000 $us</p>
-                    <a href="#">Ver Propiedades</a>
+                    <p class="precio">3000 $us</p>
+                    <a href="#" class="boton boton-amarillo">Ver Propiedades</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -61,8 +61,8 @@
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-                    <p>2000 $us</p>
-                    <a href="#">Ver Propiedades</a>
+                    <p class="precio">2000 $us</p>
+                    <a href="#" class="boton boton-amarillo">Ver Propiedades</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -70,12 +70,14 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con Alberca</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-                    <p>8000 $us</p>
-                    <a href="#">Ver Propiedades</a>
+                    <p class="precio">8000 $us</p>
+                    <a href="#" class="boton boton-amarillo">Ver Propiedades</a>
                 </div>
             </div>
         </div>
-        <a href="#">Ver Todas</a>    
+        <div class="ver-todas">
+            <a href="#" class="boton boton-verde">Ver Todas</a>
+        </div>    
     </main>    
     <section>
         <h2>Encuentra la casa de tus suenos</h2>
