se coloco estilos al blog

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
                     <p class="precio">3000 $us</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono wc">
+                            <p>4</p>
+                        </li>
+                    </ul>
                     <a href="#" class="boton boton-amarillo">Ver Propiedades</a>
                 </div>
             </div>
@@ -62,6 +76,20 @@
                     <h3>Casa terminados de lujo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
                     <p class="precio">2000 $us</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono wc">
+                            <p>4</p>
+                        </li>
+                    </ul>
                     <a href="#" class="boton boton-amarillo">Ver Propiedades</a>
                 </div>
             </div>
@@ -71,6 +99,20 @@
                     <h3>Casa con Alberca</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
                     <p class="precio">8000 $us</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono wc">
+                            <p>4</p>
+                        </li>
+                    </ul>
                     <a href="#" class="boton boton-amarillo">Ver Propiedades</a>
                 </div>
             </div>
@@ -79,31 +121,50 @@
             <a href="#" class="boton boton-verde">Ver Todas</a>
         </div>    
     </main>    
-    <section>
-        <h2>Encuentra la casa de tus suenos</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, eos. Aliquid nemo atque unde dolorem, debitis cum sequi expedita velit deleniti officiis adipisci amet ducimus aliquam minima! Temporibus, similique nesciunt.</p>
+    <section class="imagen-contacto">
+        <div class="contenedor contenido-contacto">
+            <h2>Encuentra la casa de tus suenos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, eos. Aliquid nemo atque unde dolorem, debitis cum sequi expedita velit deleniti officiis adipisci amet ducimus aliquam minima! Temporibus, similique nesciunt.</p>
+            <a href="contacto.html" class="boton boton-amarillo">Contactanos</a>
+        </div>
     </section>
-    <section>
-        <h3>Nuestro Blog</h3>
-        <article>
-            <img src="img/blog1.jpg" alt=""></img>
-            <h4>Terraza en el techo de tu casa</h4>
-            <p>Escrito <em>20/10/2019</em> por <em>Admin</em></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-        </article>
-        <article>
-            <img src="img/blog2.jpg" alt=""></img>
-            <h4>Guia para la decoracion de tu hogar</h4>
-            <p>Escrito el: <em>20/10/2019</em>por <em>Admin</em></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
-        </article>    
-    </section>
-    <section>
-        <h3>Testimoniales</h3>
-        <blockquote>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, consequuntur. Minus ducimus quam repellat provident, cumque voluptates facere sunt quibusdam quisquam quidem repellendus dolores minima praesentium quas a? Repudiandae, minus.
-        </blockquote>
-        <p>-Evaliz Morals</p>
+    <div class="seccion-inferior contenedor">
+        <section class="blog">
+            <h3 class="centrar-texto fw-300">Nuestro Blog</h3>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog1.jpg" alt=""></img>
+                </div>            
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4>Terraza en el techo de tu casa</h4>
+                    </a>
+                    <p>Escrito <span>20/10/2019</span> por <span>Admin</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
+                </div>
+            </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog2.jpg" alt=""></img>
+                </div>
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4>Guia para la decoracion de tu hogar</h4>
+                    </a>
+                <p>Escrito el: <span>20/10/2019</span>por <span>Admin</span></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis dicta aut autem iste sequi</p>
+                </div>
+            </article>    
+        </section>
+    </div>
+    <section class="seccion-inferior testimoniales">
+        <h3 class="centrar-texto fw-300">Testimoniales</h3>
+        <div class="testimoniales">
+            <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, consequuntur. Minus ducimus quam repellat provident, cumque voluptates facere sunt quibusdam quisquam quidem repellendus dolores minima praesentium quas a? Repudiandae, minus.
+            </blockquote>
+            <p>-Evaliz Morals</p>
+        </div>        
     </section>
     <footer>
         <nav>
