se trata de corregir los prolblemas con testimoniales

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
             </article>    
         </section>
     </div>
-    <section class="seccion-inferior testimoniales">
+    <section class="testimoniales">
         <h3 class="centrar-texto fw-300">Testimoniales</h3>
-        <div class="testimoniales">
+        <div class="testimonial">
             <blockquote>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, consequuntur. Minus ducimus quam repellat provident, cumque voluptates facere sunt quibusdam quisquam quidem repellendus dolores minima praesentium quas a? Repudiandae, minus.
             </blockquote>
