--- a/index.html
+++ b/index.html
@@ -156,24 +156,27 @@
                 </div>
             </article>    
         </section>
+        <section class="testimoniales">
+            <h3 class="centrar-texto fw-300">Testimoniales</h3>
+            <div class="testimonial">
+                <blockquote>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, consequuntur. Minus ducimus quam repellat provident, cumque voluptates facere sunt quibusdam quisquam quidem repellendus dolores minima praesentium quas a? Repudiandae, minus.
+                </blockquote>
+                <p>-Evaliz Morals</p>
+            </div>        
+        </section>
     </div>
-    <section class="testimoniales">
-        <h3 class="centrar-texto fw-300">Testimoniales</h3>
-        <div class="testimonial">
-            <blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, consequuntur. Minus ducimus quam repellat provident, cumque voluptates facere sunt quibusdam quisquam quidem repellendus dolores minima praesentium quas a? Repudiandae, minus.
-            </blockquote>
-            <p>-Evaliz Morals</p>
-        </div>        
-    </section>
-    <footer>
-        <nav>
-            <a href="nosotros.html">Acerca de</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
-        <p>Todos los Derechos Reservados 2020 &copy;</p>
+    
+    <footer class="site-footer seccion">
+        <div class="contenedor contenedor-footer">
+            <nav class="navegacion">
+                <a href="nosotros.html">Acerca de</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+            <p class="copyrigth">Todos los Derechos Reservados 2020 &copy;</p>
+        </div>
     </footer>
     
 
