--- a/contacto.html
+++ b/contacto.html
@@ -54,9 +54,21 @@
                     <option value="">Vende</option>
                 </select>
                 <label for="cantidad">Cantidad:</label>
-                <input type="number">
+                <input type="number" mim="0" max="100" step="5">
             </fieldset>
-
+            <fieldset>
+                <legend>Contacto</legend>
+                <p>Como desea ser contactado</p>
+                <label for="telefono">Telefono</label>
+                <input type="radio" name="contacto" value="telefono" id="telefono">
+                <label for="correo">Email:</label>
+                <input type="radio" name="contacto" value="correo" id="correo">
+                <p>Si eligio telefono, elija la fecha y la hora</p>
+                <label for="fecha">Fecha:</label>
+                <input type="date" id="fecha">
+                <label for="hora">Hora:</label>
+                <input type="time" id="hora" min="09:00" max="18:00">
+            </fieldset>
             <input type="submit">
         </form>
 
