se puso el stio media queries para que sea responsive

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <img src="img/logo.svg" alt=""></img>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/comment.svg" alt="icono barras">
+                    </a>
+                </div>
                 <nav class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
